# Easy-Acumatica

./: .gitignore  LICENSE  README.md  STUBSETUP.md  generate_stubs.py  pyproject.toml  pytest.ini
.github/workflows/: codeql.yml  publish.yml
scripts/: fix.py
src/easy_acumatica/: __init__.py  batch.py  cli.py  client.py  config.py  contacts.py  core.py  exceptions.py  filters.py  generate_stubs.py  helpers.py  inquiries.py  model_factory.py  models.pyi  odata.py  service_factory.py  utils.py
src/easy_acumatica/builders/: __init__.py  contact_builder.py
src/easy_acumatica/models/: __init__.py  shipment_builder.py
src/easy_acumatica/scheduler/: builder.py  core.py  decorators.py  schedules.py  task.py  utils.py
src/easy_acumatica/sub_services/: __init__.py  account_groups.py  accounts.py  actions.py  activities.py  bills.py  boms.py  business_accounts.py  cases.py  codes.py  companies.py  contacts.py  customers.py  employee_payroll.py  employees.py  files.py  inquiries.py  inventory.py  invoices.py  leads.py  ledgers.py  manufacturing.py  payments.py  purchase_orders.py  purchase_receipts.py  records.py  sales_orders.py  service_orders.py  shipments.py  stock_items.py  tax_categories.py  time_entries.py  transactions.py  work_calendars.py  work_locations.py
src/easy_acumatica/tui/: __init__.py  app.py  code_render.py  model_builder.py  screens.py  service_call.py  styles.tcss
tests/: conftest.py  mock_server.py  mock_swagger.py  mock_xml.py  test_accounts_service.py  test_actions_service.py  test_auto_generation.py  test_batch.py  test_bill_builder.py  test_bills_service.py  test_bom_builder.py  test_boms_service.py  test_caching.py  test_case_builder.py  test_cases_service.py  test_client.py  test_client_features.py  test_code_builders.py  test_codes_service.py  test_configuration_entry_builder.py  test_contact_builder.py  test_contacts.py  test_contacts_service.py  test_core.py  test_custom_fields.py  test_customer_builder.py  test_customers_service.py  test_employee_builder.py  test_employee_payroll_builders.py  test_employees_service.py  test_error_handling.py  test_exceptions.py  test_filters.py  test_inquiries.py  test_inquiries_service.py  test_inquiry_builder.py  test_inventory_issue_builder.py  test_inventory_service.py  test_invoice_builder.py  test_item_warehouse_builder.py  (+31 more)
