[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_acumatica"
version = "0.6.0"
description = "Python wrapper for the Acumatica REST API"
readme = "README.md"
authors = [{ name="Matthew Hirstius", email="matthew.c.hirstius@gmail.com" }]
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["acumatica", "erp", "api", "rest", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Typing :: Typed",
]

dependencies = [
  "requests>=2.25.1,<3.0.0",
  "aiohttp>=3.8.0,<4.0.0",  # Add this line
  "typing-extensions>=4.0.0;python_version<'3.10'",
  "croniter>=1.3.0",  # For cron expression parsing in scheduler
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.0.0",
  "pytest-asyncio>=0.23.0",
  "requests-mock>=1.9.0",
  "flask>=2.0.0",
  "types-requests",
  "textual>=0.70.0",  # for TUI tests
]
tui = [
  "textual>=0.70.0",  # interactive terminal UI for the `ea-debug` command
]

[project.urls]
"Homepage" = "https://www.easyacumatica.com/"
"Source" = "https://github.com/Nioron07/Easy-Acumatica"
"Documentation" = "https://easyacumatica.com/python"
"Bug Tracker" = "https://github.com/Nioron07/Easy-Acumatica/issues"

[project.scripts]
generate-stubs = "easy_acumatica.generate_stubs:main"
ea-debug = "easy_acumatica.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["easy_acumatica*"]

[tool.setuptools.package-data]
# PEP 561 compliance - include .pyi stub files and py.typed marker
# tui/*.tcss ships the TUI stylesheet alongside the package.
easy_acumatica = ["py.typed", "*.pyi", "tui/*.tcss"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--tb=short",
  "--cov=easy_acumatica",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "-vv",
]

[tool.coverage.run]
source = ["src/easy_acumatica"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
